--- a/index.html
+++ b/index.html
@@ -1,3 +1,10 @@
+<!-- 
+ Name: Erik Mason 
+ Student#: 100988159 
+ Date: 2025-05-09 
+ Description: the main page for inft1206
+ -->
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -5,10 +12,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
 </head>
-<!-- Name: Erik Mason 
- Student#: 100988159 
- Date: 2025-05-09 
- Description: the main page for inft1206-->
+
 <body>
     <p>
         <img src="./img/Apple.jpg" alt="main_logo.jpg" width="100">
@@ -22,9 +26,13 @@
         <a href="https://durhamcollege.ca" target="_blank"><strong>Durham Collage</strong></a>
     </p>
     <p> 
+        
         <a href="./week 1/week_1_test.html" target=""><em>Week 1</em></a>
     </p>
 
+    <p>
+        <a href="./Projects/assinment_1.html" target=""><em>Assinment 1</em></a>
+    </p>
 
     <p> @2025 Erik M </p>
 </body>
