--- a/week 1/week_1_test.html
+++ b/week 1/week_1_test.html
@@ -1,3 +1,10 @@
+<!-- 
+ Name: Erik Mason 
+ Student#: 100988159 
+ Date: 2025-05-09 
+ Description: the week one page for inft1206
+ -->
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -5,10 +12,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
 </head>
-<!-- Name: Erik Mason 
- Student#: 100988159 
- Date: 2025-05-09 
- Description: the week one page for inft1206-->
+
 <body>
     <p>
         <img src="../img/Apple.jpg" alt="main_logo.jpg" width="100">
